--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
 }
 
 .container {
-    margin-top: 50px;
     width: 800px;
 }
 
@@ -20,10 +19,12 @@ body {
     align-items: center;
     justify-content: center;
     position: relative;
+    margin-top: 50px;
+    margin-bottom: 30px;
 }
 
 .grid .squares {
-    border: 1px solid white;
+    border: 1px solid rgb(37, 37, 37);
     padding: 0;
     position: absolute;
 }
