--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     border: 1px solid rgb(37, 37, 37);
     padding: 0;
     position: absolute;
+    background-color: black;
 }
 
 .control.container {
@@ -34,6 +35,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 10px;
 }
 
 .control.button {
@@ -42,9 +44,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgba(55, 194, 194, 0.664);
+    color: rgb(25, 90, 90);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', Arial, sans-serif;
-    background-color: rgb(160, 88, 0);
+    background-color: rgb(200, 120, 0);
     border-radius: 5px;
     border: 3px solid grey;
     font-size: 30px;
@@ -54,4 +56,33 @@ body {
 .control.button:hover {
     background-color: rgb(255, 140, 0);
     color: rgb(25, 90, 90);
+}
+
+.control input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+}
+
+.control label {
+    display: inline-block;
+    background-color:  rgb(155, 93, 0);
+    padding: 10px 20px;
+    font-family: sans-serif, Arial;
+    font-size: 16px;
+    border: 2px solid grey;
+    border-radius: 4px;
+}
+
+.control label:hover {
+background-color: rgb(207, 114, 0);
+}
+
+.control input[type="radio"]:focus + label {
+    border: 2px dashed grey;
+}
+
+.control input[type="radio"]:checked + label {
+    background-color: rgb(207, 114, 0);
+    border-color: rgb(255, 140, 0);
 }
